# farseer

./: README.md
software/binocs_control/: CMakeLists.txt
software/binocs_control/configs/: desktop_generic.toml  rpi_generic.toml
software/binocs_control/include/: binoc_manager.h  display_device.h  image_source.h  image_stabalization.h
software/binocs_control/src/: binoc_control.cpp  binoc_manager.cpp  display_device.cpp  image_source.cpp  image_stabalization.cpp
software/optics_analysis/: 3 lens infinite-infinite.ipynb
software/optics_analysis/.ipynb_checkpoints/: 3 lens infinite-infinite-checkpoint.ipynb
